--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,19 @@
-/Testframe$1.class
-/Testframe.class
+/Home$10.class
+/Home$2.class
+/Home$3.class
+/Home$4.class
+/Home$5.class
+/Home$6.class
+/Home$7.class
+/Home$8.class
+/Home$9.class
+/JFrame_TeacherDashboard$1.class
+/JFrame_TeacherDashboard$2.class
+/JFrame_TeacherDashboard$3.class
+/JFrame_TeacherDashboard$4.class
+/JFrame_TeacherDashboard$5.class
+/JFrame_TeacherDashboard$6.class
+/JFrame_TeacherDashboard$7.class
+/JFrame_TeacherDashboard$8.class
+/JFrame_TeacherDashboard$9.class
+/JFrame_TeacherDashboard.class
