--- a/bin/.classpath
+++ b/bin/.classpath
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_121/lib/mysql-connector-java-8.0.20.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_121/lib/jcalendar-1.4.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_251"/>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/jconsole.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/AbsoluteLayout.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/ant-javafx.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/dt.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/javafx-mx.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/jconsole.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/jgoodies-common-1.8.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/jgoodies-common-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/jgoodies-forms-1.8.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/jgoodies-forms-1.8.0-sources.jar"/>
-=======
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_121/lib/AbsoluteLayout.jar"/>
->>>>>>> 695681938b1dc2980a0fe65aee2ab1e1e57adcbb
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/mysql-connector-java-8.0.20.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/packager.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/sa-jdi.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_251/lib/tools.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
